--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -206,6 +206,12 @@
   fill: #f8f9fa !important;
 }
 
+.darkMode .headerShape svg {
+  fill: #000000 !important;
+}
+
+
+
 /* Animaciones */
 @keyframes fadeSlideUp {
   to {
